--- a/src/index.html
+++ b/src/index.html
@@ -19,9 +19,9 @@
         <div>Kagami.com</div>
         <div>
           <a href="#home">ホーム</a>
-          <a href="#home">ポートフォリオ</a>
-          <a href="#home">お客様</a>
-          <a href="#home"><button>お問い合わせ</button></a>
+          <a href="#portfolio">ポートフォリオ</a>
+          <a href="#clients">お客様</a>
+          <a href="#contact"><button>お問い合わせ</button></a>
         </div>
       </div>
     </header>
