--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,13 @@
       href="https://fonts.googleapis.com/css2?family=Klee+One&family=Open+Sans:wght@300;400;500;600;700&family=Roboto:wght@300;400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body class="font-opensans bg-body text-white">
     <!-- ナビゲーションバー -->
@@ -43,6 +50,7 @@
             </button></a
           >
         </div>
+        <div class="md:hidden"><i class="fa-solid fa-bars"></i></div>
       </div>
     </header>
   </body>
