--- a/src/index.html
+++ b/src/index.html
@@ -25,8 +25,8 @@
       <div
         class="container mx-auto flex justify-between items-center px-8 md:px-14 lg:px-24 w-full"
       >
-        <div class="text-3xl font-bold">Kagami.com</div>
-        <div class="space-x-12">
+        <div class="text-2xl font-bold">Kagami.com</div>
+        <div class="space-x-12 hidden md:flex items-center">
           <a
             href="#home"
             class="hover:text-selected-text transition-all duration-300"
