--- a/src/index.html
+++ b/src/index.html
@@ -53,5 +53,34 @@
         <div class="md:hidden"><i class="fa-solid fa-bars"></i></div>
       </div>
     </header>
+
+    <!-- セクション -->
+    <div id="home" class="container mt-12"></div>
+    <div class="flex flex-wrap md:flex-nowrap">
+      <div class="md:my-16 md:ml-0 lg:ml-20 mx-auto max-w-xl">
+        <h1
+          class="font-bold text-cyan-200 text-4xl text-center sm:text-3xl md:text-left md:text-5xl lg:text-6xl xl:text-7xl"
+        >
+          Welcome to <br />
+          Penguin <br />
+          Engineering <br />
+          My Skills <br />
+          And Penguins!
+        </h1>
+        <div class="flex justify-center items-center md:flex md:justify-normal">
+          <button
+            class="px-6 py-2 bg-theme font-bold rounded-lg hover:bg-purple-600 transition-all duration-300 mt-10"
+          >
+            <i class="fa-solid fa-kiwi-bird mr-1"></i>
+            <span>Learn More</span>
+          </button>
+        </div>
+      </div>
+      <img
+        src="./images/1_Humboldt.jpg"
+        alt="image"
+        class="md:absolute lg:top-52 lg:right-32 md:w-3/5 w-10/12 mt-12 md:mt-0 top-60 right-6 mx-auto -z-10 lg:w-3/6"
+      />
+    </div>
   </body>
 </html>
