feat: portfolio section

--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
       </div>
     </header>
 
-    <!-- セクション -->
+    <!-- ホーム -->
     <div id="home" class="container mt-12"></div>
     <div class="flex flex-wrap md:flex-nowrap">
       <div class="md:my-16 md:ml-0 lg:ml-20 mx-auto max-w-xl">
@@ -81,6 +81,88 @@
         alt="image"
         class="md:absolute lg:top-52 lg:right-32 md:w-3/5 w-10/12 mt-12 md:mt-0 top-60 right-6 mx-auto -z-10 lg:w-3/6"
       />
+    </div>
+
+    <!-- ポートフォリオ -->
+    <!-- <div id="home" class="container mt-64"></div> -->
+    <div
+      id="portfolio"
+      class="container mt-64 justify-between items-center mx-auto px-8 md:px-14 lg:px-24 w-full"
+    >
+      <section class="w-full">
+        <h2 class="secondary-title">My Portfolio</h2>
+        <p class="section-paragraph">
+          Here is the application I have been working on!
+        </p>
+        <div class="grid lg:grid-cols-3 md:grid-cols-2 grid-cols-1 gap-6">
+          <div class="relative">
+            <a href="https://predict-image-kagami-t.streamlit.app/">
+              <img
+                src="./images/2_snake_penguin.jpeg"
+                alt=""
+                class="w-full h-36 lg:h-72 object-cover rounded-md cursor-pointer"
+              />
+              <div class="img-text">画像認識アプリ</div>
+            </a>
+          </div>
+
+          <div class="relative">
+            <a href="https://kagami-tsukimura.github.io/text-tracing-editor/">
+              <img
+                src="./images/3_cybersnake_penguin.jpeg"
+                alt=""
+                class="w-full h-36 lg:h-72 object-cover rounded-md cursor-pointer"
+              />
+              <div class="img-text">文字なぞりエディタ</div>
+            </a>
+          </div>
+
+          <div class="relative">
+            <!-- TODO: アプリ設定する -->
+            <a href="https://google.com/">
+              <img
+                src="./images/4_typing_penguin.jpeg"
+                alt=""
+                class="w-full h-36 lg:h-72 object-cover rounded-md cursor-pointer"
+              />
+              <div class="img-text">編集中...</div>
+            </a>
+          </div>
+          <div class="relative">
+            <!-- TODO: アプリ設定する -->
+            <a href="https://google.com/">
+              <img
+                src="./images/5_typing_penguin.jpeg"
+                alt=""
+                class="w-full h-36 lg:h-72 object-cover rounded-md cursor-pointer"
+              />
+              <div class="img-text">編集中...</div>
+            </a>
+          </div>
+          <div class="relative">
+            <!-- TODO: アプリ設定する -->
+            <a href="https://google.com/">
+              <img
+                src="./images/6_flying_penguin.jpeg"
+                alt=""
+                class="w-full h-36 lg:h-72 object-cover rounded-md cursor-pointer"
+              />
+              <div class="img-text">編集中...</div>
+            </a>
+          </div>
+          <div class="relative">
+            <!-- TODO: アプリ設定する -->
+            <a href="https://google.com/">
+              <img
+                src="./images/7_pillow_penguin.jpeg"
+                alt=""
+                class="w-full h-36 lg:h-72 object-cover rounded-md cursor-pointer"
+              />
+              <div class="img-text">編集中...</div>
+            </a>
+          </div>
+        </div>
+      </section>
     </div>
   </body>
 </html>
