feat: contact form

--- a/src/index.html
+++ b/src/index.html
@@ -86,7 +86,7 @@
     <!-- Portfolio -->
     <div
       id="portfolio"
-      class="container mt-32 justify-between items-center mx-auto px-8 md:px-14 lg:px-24 w-full"
+      class="container mt-48 justify-between items-center mx-auto px-8 md:px-14 lg:px-24 w-full"
     >
       <section class="w-full">
         <h2 class="secondary-title">My Portfolio</h2>
@@ -164,7 +164,7 @@
     <!-- Skill stacks -->
     <div
       id="portfolio"
-      class="container mt-32 justify-between items-center mx-auto px-4 md:px-14 lg:px-24 w-full"
+      class="container mt-48 justify-between items-center mx-auto px-4 md:px-14 lg:px-24 w-full"
     >
       <section class="w-full">
         <h2 class="secondary-title">Skill Stack</h2>
@@ -265,6 +265,56 @@
               </div>
             </div>
           </a>
+        </div>
+      </section>
+    </div>
+    <!-- Contact Us -->
+    <div
+      id="contact"
+      class="container mt-48 mb-20 justify-between items-center mx-auto px-4 md:px-14 lg:px-24 w-full"
+    >
+      <section class="w-full">
+        <h2 class="secondary-title">Contact Us</h2>
+        <p class="section-paragraph">
+          Feel free to reach out to me using the contact information provided
+          below.
+        </p>
+        <div class="w-full grid lg:grid-cols-2 gap-8 lg:gap-32 mt-16">
+          <div class="space-y-12">
+            <div>
+              <label class="text-white block mb-6 text-xl font-bold"
+                >Name</label
+              >
+              <input
+                type="text"
+                class="w-full border border-inputBorder bg-input rounded-lg px-4 py-4"
+              />
+            </div>
+            <div>
+              <label class="text-white block mb-6 text-xl font-bold"
+                >Mail address</label
+              >
+              <input
+                type="email"
+                class="w-full border border-inputBorder bg-input rounded-lg px-4 py-4"
+              />
+            </div>
+            <div>
+              <label class="text-white block mb-6 text-xl font-bold"
+                >Message</label
+              >
+              <textarea
+                rows="5"
+                class="resize row-auto w-full border border-inputBorder bg-input rounded-lg p-2"
+                placeholder="Fill in your inquiry here..."
+              ></textarea>
+            </div>
+            <button
+              class="px-8 py-3 bg-theme font-bold rounded-lg hover:bg-purple-600 transition-all duration-300"
+            >
+              Submit
+            </button>
+          </div>
         </div>
       </section>
     </div>
