--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,12 @@
       <div
         class="container mx-auto flex justify-between items-center px-8 md:px-14 lg:px-24 w-full"
       >
-        <div class="text-2xl font-bold">Kagami.com</div>
+        <div class="text-2xl font-bold">
+          <a href="#top">
+            <i class="fa-solid fa-feather"></i>
+            Kagami.com
+          </a>
+        </div>
         <div class="space-x-12 hidden md:flex items-center">
           <a
             href="#home"
@@ -43,7 +48,8 @@
             class="hover:text-selected-text transition-all duration-300"
             >Skill Stack</a
           >
-          <a href="#contact"
+          <a
+            href="https://form.run/embed/@kagami-penguin-t-eydmRhN0UUwMd1lUXdEP?embed=direct"
             ><button
               class="px-6 py-2 bg-theme font-bold rounded-lg hover:bg-purple-600 transition-all duration-300"
             >
@@ -69,18 +75,20 @@
           And Penguins!
         </h1>
         <div class="flex justify-center items-center md:flex md:justify-normal">
-          <button
-            class="px-6 py-2 bg-theme font-bold rounded-lg hover:bg-purple-600 transition-all duration-300 mt-10"
-          >
-            <i class="fa-solid fa-kiwi-bird mr-1"></i>
-            <span>Learn More</span>
-          </button>
+          <a href="https://qiita.com/kagami_t">
+            <button
+              class="px-6 py-2 bg-theme font-bold rounded-lg hover:bg-purple-600 transition-all duration-300 mt-10"
+            >
+              <i class="fa-solid fa-kiwi-bird mr-1"></i>
+              <span>Learn More on Qiita</span>
+            </button>
+          </a>
         </div>
       </div>
       <img
         src="./images/1_Humboldt.jpg"
         alt="image"
-        class="md:absolute lg:top-52 lg:right-32 md:w-3/5 w-10/12 mt-12 md:mt-0 top-60 right-6 mx-auto -z-10 lg:w-3/6"
+        class="md:absolute lg:top-36 xl:right-48 xl:w-2/5 w-7/12 mt-8 md:mt-0 top-60 right-4 -z-10 mx-auto"
       />
     </div>
 
@@ -164,7 +172,7 @@
     </div>
     <!-- Skill stacks -->
     <div
-      id="portfolio"
+      id="skills"
       class="container mt-48 justify-between items-center mx-auto px-4 md:px-14 lg:px-24 w-full"
     >
       <section class="w-full">
@@ -275,46 +283,34 @@
       class="container mt-48 mb-20 justify-between items-center mx-auto px-4 md:px-14 lg:px-24 w-full"
     >
       <section class="w-full">
-        <h2 class="secondary-title">Contact Us</h2>
+        <h2 class="secondary-title">Contact</h2>
         <p class="section-paragraph">
-          Feel free to reach out to me using the contact information provided
-          below.
+          Please feel free to contact us by clicking below.
         </p>
-        <div class="w-full grid lg:grid-cols-2 gap-8 lg:gap-32 mt-16">
-          <div class="space-y-12">
-            <div>
-              <label class="text-white block mb-6 text-xl font-bold"
-                >Name</label
-              >
-              <input
-                type="text"
-                class="w-full border border-inputBorder bg-input rounded-lg px-4 py-4"
-              />
-            </div>
-            <div>
-              <label class="text-white block mb-6 text-xl font-bold"
-                >Mail address</label
-              >
-              <input
-                type="email"
-                class="w-full border border-inputBorder bg-input rounded-lg px-4 py-4"
-              />
-            </div>
-            <div>
-              <label class="text-white block mb-6 text-xl font-bold"
-                >Message</label
-              >
-              <textarea
-                rows="5"
-                class="resize row-auto w-full border border-inputBorder bg-input rounded-lg p-2"
-                placeholder="Fill in your inquiry here..."
-              ></textarea>
-            </div>
-            <button
-              class="px-8 py-3 bg-theme font-bold rounded-lg hover:bg-purple-600 transition-all duration-300"
-            >
-              Submit
-            </button>
+        <a
+          href="https://form.run/embed/@kagami-penguin-t-eydmRhN0UUwMd1lUXdEP?embed=direct"
+          ><button
+            class="px-6 py-2 bg-theme font-bold rounded-lg hover:bg-purple-600 transition-all duration-300"
+          >
+            Contact Us
+          </button></a
+        >
+        <!-- SNSアイコン -->
+        <div class="w-full gap-8 lg:gap-32 mt-16">
+          <div class="space-x-4 flex justify-start items-end">
+            <span class="text-xl sm:text-2xl text-secondary">Follow Us</span>
+            <a href="https://github.com/kagami-tsukimura"
+              ><i class="fa-brands fa-github icon"></i
+            ></a>
+            <a href="#"><i class="fa-brands fa-x-twitter icon"></i></a>
+            <a href="mailto:kagami.penguin.t@gmail.com"
+              ><i class="fa-solid fa-envelope icon"></i
+            ></a>
+            <a
+              href="#top"
+              class="text-2xl sm:text-3xl flex flex-wrap w-full justify-end hover:text-selected-text transition-all duration-300"
+              ><i class="fa-solid fa-circle-chevron-up"></i
+            ></a>
           </div>
         </div>
       </section>
