--- a/src/index.html
+++ b/src/index.html
@@ -306,10 +306,12 @@
             <a href="mailto:kagami.penguin.t@gmail.com"
               ><i class="fa-solid fa-envelope icon"></i
             ></a>
-            <a
-              href="#top"
-              class="text-2xl sm:text-3xl flex flex-wrap w-full justify-end hover:text-selected-text transition-all duration-300"
-              ><i class="fa-solid fa-circle-chevron-up"></i
+          </div>
+          <div class="text-2xl sm:text-3xl flex flex-wrap justify-end">
+            <a href="#top"
+              ><i
+                class="fa-solid fa-circle-chevron-up hover:text-selected-text transition-all duration-300"
+              ></i
             ></a>
           </div>
         </div>
