feat: add wage-analysis to the portfolio

--- a/src/index.html
+++ b/src/index.html
@@ -125,13 +125,13 @@
           </div>
           <div class="relative">
             <!-- TODO: Setting app -->
-            <a href="https://google.com/">
+            <a href="https://app-wage-analysis-kagami-t.streamlit.app/">
               <img
                 src="./images/4_typing_penguin.jpeg"
                 alt=""
                 class="w-full h-36 lg:h-72 object-cover rounded-md cursor-pointer"
               />
-              <div class="img-text">Editing...</div>
+              <div class="img-text">wage-analysis</div>
             </a>
           </div>
           <div class="relative">
