--- a/src/index.html
+++ b/src/index.html
@@ -317,5 +317,8 @@
         </div>
       </section>
     </div>
+    <footer class="text-center">
+      <small>&copy; 2023 Kagami Tsukimura</small>
+    </footer>
   </body>
 </html>
