feat: new portfolio

--- a/src/index.html
+++ b/src/index.html
@@ -136,24 +136,24 @@
           </div>
           <div class="relative">
             <!-- TODO: Setting app -->
-            <a href="https://google.com/">
+            <a href="https://room-booking.streamlit.app/">
               <img
                 src="./images/5_typing_penguin.jpeg"
                 alt=""
                 class="w-full h-36 lg:h-72 object-cover rounded-md cursor-pointer"
               />
-              <div class="img-text">Editing...</div>
+              <div class="img-text">room-booking</div>
             </a>
           </div>
           <div class="relative">
             <!-- TODO: Setting app -->
-            <a href="https://google.com/">
+            <a href="https://booking-1-x3709405.deta.app/">
               <img
                 src="./images/6_flying_penguin.jpeg"
                 alt=""
                 class="w-full h-36 lg:h-72 object-cover rounded-md cursor-pointer"
               />
-              <div class="img-text">Editing...</div>
+              <div class="img-text">room-booking(API)</div>
             </a>
           </div>
           <div class="relative">
