--- a/src/index.html
+++ b/src/index.html
@@ -144,7 +144,7 @@
             </a>
           </div>
           <div class="relative">
-            <a href="https://booking-1-x3709405.deta.app/">
+            <a href="https://room-booking-api-v4f1.onrender.com/">
               <img
                 src="./images/6_flying_penguin.jpeg"
                 alt=""
