feat: new portfolio

--- a/src/index.html
+++ b/src/index.html
@@ -155,13 +155,13 @@
           </div>
           <div class="relative">
             <!-- TODO: Setting app -->
-            <a href="https://google.com/">
+            <a href="https://discord-clone-9d6cc.web.app/">
               <img
                 src="./images/7_pillow_penguin.jpeg"
                 alt=""
                 class="w-full h-36 lg:h-72 object-cover rounded-md cursor-pointer"
               />
-              <div class="img-text">Editing...</div>
+              <div class="img-text">discord-clone</div>
             </a>
           </div>
         </div>
