--- a/src/index.html
+++ b/src/index.html
@@ -104,13 +104,15 @@
         </p>
         <div class="grid lg:grid-cols-3 md:grid-cols-2 grid-cols-1 gap-6">
           <div class="relative">
-            <a href="https://predict-image-kagami-t.streamlit.app/">
+            <a
+              href="https://kagami-tsukimura.github.io/penguin-image-classification/"
+            >
               <img
                 src="./images/2_snake_penguin.jpeg"
                 alt=""
                 class="w-full h-36 lg:h-72 object-cover rounded-md cursor-pointer"
               />
-              <div class="img-text">image-crassification</div>
+              <div class="img-text">penguin-crassification</div>
             </a>
           </div>
           <div class="relative">
@@ -144,13 +146,13 @@
             </a>
           </div>
           <div class="relative">
-            <a href="https://room-booking-api-v4f1.onrender.com/">
+            <a href="https://predict-image-kagami-t.streamlit.app/">
               <img
                 src="./images/6_flying_penguin.jpeg"
                 alt=""
                 class="w-full h-36 lg:h-72 object-cover rounded-md cursor-pointer"
               />
-              <div class="img-text">room-booking(API)</div>
+              <div class="img-text">image-crassification</div>
             </a>
           </div>
           <div class="relative">
